--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "ajv": "^8.11.0",
+    "ajv-keywords": "^5.1.0",
     "axios": "^0.21.4",
     "dayjs": "^1.10.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
+    "react-router-dom": "^6.0.2",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.6.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
